--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,14 @@ DARK BLUE: #1D3557
 body {
     margin: 0;
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 img {
     width: 100px;
 }
+
+/* hero section */
 
 .hero {
     margin: 0 auto;
@@ -23,4 +26,33 @@ img {
     width: 720px;
     background-image: url("/images/bridge.jpeg");
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#hero-greeting {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 37px;
+    text-align: center;
+    color: #FFFFFF;
+    background: #1D3557;
+    padding: 5px 12px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+#hero-info {
+    margin-top: 0;
+    width: 500px;
+    font-weight: 700;
+    font-size: 18.72px;
+    line-height: 22px;
+    text-align: center;
+    color: #FFFFFF;
+    background: #457B9D;
+    border-radius: 10px;
+    padding: 10px 30px;
 }
