--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ img {
 }
 
 /* hero section */
-
 .hero {
     margin: 0 auto;
     height: 343px;
@@ -58,7 +57,6 @@ img {
 }
 
 /* activities */
-
 .activities {
     width: 720px;
     height: 378px;
@@ -104,4 +102,33 @@ p {
     width: 100px;
     height: 100px;
     border-radius: 50%;
+}
+
+/* guide */
+.guide{
+    width: 400px;
+    height: 294px;
+    margin: 50px auto;
+    background: #A8DADC;
+    box-shadow: 0px 6px 0px #1D3557;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.guide-img {
+    border-radius: 10px;
+}
+
+.text {
+    width: 180px;
+}
+
+.text p {
+    font-style: italic;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    color: #1D3557;
 }
